JsonReaderIterator is no longer closeable (rationale: the iterator does not open the resource itself)